--- a/Dog-and-Cat.ipynb
+++ b/Dog-and-Cat.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled127.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPNlo2LAgipHOKczMf2yzdY",
+      "authorship_tag": "ABX9TyMCtjBHCWnnECG7wbYBscua",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,255 +15,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "853df0b2638643cebc32519113a4679a": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "state": {
-            "_view_name": "HBoxView",
-            "_dom_classes": [],
-            "_model_name": "HBoxModel",
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.5.0",
-            "box_style": "",
-            "layout": "IPY_MODEL_200d1ca3a54941669e4652815898d1cc",
-            "_model_module": "@jupyter-widgets/controls",
-            "children": [
-              "IPY_MODEL_146017a13b6045038889ecb746f273d4",
-              "IPY_MODEL_41569a4040d141bd80fa5f45188341d7"
-            ]
-          }
-        },
-        "200d1ca3a54941669e4652815898d1cc": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        },
-        "146017a13b6045038889ecb746f273d4": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatProgressModel",
-          "state": {
-            "_view_name": "ProgressView",
-            "style": "IPY_MODEL_984f26cf73694ebe884873efc911633c",
-            "_dom_classes": [],
-            "description": "100%",
-            "_model_name": "FloatProgressModel",
-            "bar_style": "success",
-            "max": 244418560,
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "value": 244418560,
-            "_view_count": null,
-            "_view_module_version": "1.5.0",
-            "orientation": "horizontal",
-            "min": 0,
-            "description_tooltip": null,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_45e5e5ae2ecb4e4894e5b4f198d65cea"
-          }
-        },
-        "41569a4040d141bd80fa5f45188341d7": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "state": {
-            "_view_name": "HTMLView",
-            "style": "IPY_MODEL_d1ad411da76f4a8b932ac92cfaf7ff6e",
-            "_dom_classes": [],
-            "description": "",
-            "_model_name": "HTMLModel",
-            "placeholder": "​",
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "value": " 233M/233M [00:05&lt;00:00, 43.6MB/s]",
-            "_view_count": null,
-            "_view_module_version": "1.5.0",
-            "description_tooltip": null,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_12c391a384b4403faf6336d034576ed6"
-          }
-        },
-        "984f26cf73694ebe884873efc911633c": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ProgressStyleModel",
-          "state": {
-            "_view_name": "StyleView",
-            "_model_name": "ProgressStyleModel",
-            "description_width": "initial",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.2.0",
-            "bar_color": null,
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "45e5e5ae2ecb4e4894e5b4f198d65cea": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        },
-        "d1ad411da76f4a8b932ac92cfaf7ff6e": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "state": {
-            "_view_name": "StyleView",
-            "_model_name": "DescriptionStyleModel",
-            "description_width": "",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.2.0",
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "12c391a384b4403faf6336d034576ed6": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        }
-      }
     }
   },
   "cells": [
@@ -284,18 +35,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6dMEnt9qq5uC",
-        "outputId": "6862b928-2d49-4014-8271-3d955d08cf30"
+        "outputId": "a4d040c1-d841-4748-fc45-b0f5363ef375"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -319,7 +70,7 @@
         "from torchvision import transforms\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 2,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -332,66 +83,20 @@
         "                                transforms.Resize(227),\n",
         "                                transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])"
       ],
-      "execution_count": 3,
+      "execution_count": 68,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IyxjbUlZ-TBt",
-        "outputId": "7ab037ef-baef-43c8-daeb-e9469853b5ce",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102,
-          "referenced_widgets": [
-            "853df0b2638643cebc32519113a4679a",
-            "200d1ca3a54941669e4652815898d1cc",
-            "146017a13b6045038889ecb746f273d4",
-            "41569a4040d141bd80fa5f45188341d7",
-            "984f26cf73694ebe884873efc911633c",
-            "45e5e5ae2ecb4e4894e5b4f198d65cea",
-            "d1ad411da76f4a8b932ac92cfaf7ff6e",
-            "12c391a384b4403faf6336d034576ed6"
-          ]
-        }
+        "id": "IyxjbUlZ-TBt"
       },
       "source": [
         "alexnet = models.alexnet(pretrained=True)\n",
         "alexnet.classifier=alexnet.classifier[0:5]"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading: \"https://download.pytorch.org/models/alexnet-owt-4df8aa71.pth\" to /root/.cache/torch/hub/checkpoints/alexnet-owt-4df8aa71.pth\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "853df0b2638643cebc32519113a4679a",
-              "version_minor": 0,
-              "version_major": 2
-            },
-            "text/plain": [
-              "HBox(children=(FloatProgress(value=0.0, max=244418560.0), HTML(value='')))"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 69,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -428,7 +133,7 @@
         "       if 'dog' in f.filename: labels.append(1)\n",
         "       elif 'cat' in f.filename: labels.append(0)"
       ],
-      "execution_count": 52,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -440,7 +145,7 @@
         "images=np.array(images)\n",
         "labels=np.array(labels)"
       ],
-      "execution_count": 53,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -460,7 +165,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(images,labels, test_size=0.2, random_state=42)"
       ],
-      "execution_count": 58,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -472,7 +177,7 @@
         "X_train=X_train.reshape(X_train.shape[0],X_train.shape[1]*X_train.shape[2])\n",
         "X_test=X_test.reshape(X_test.shape[0],X_test.shape[1]*X_test.shape[2])"
       ],
-      "execution_count": 62,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -482,14 +187,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pSrPsSK7Czmf",
-        "outputId": "e8802f7a-7b8c-49d1-dd6a-2ad4418a49cb"
+        "outputId": "8835773c-4fca-47c0-e903-cc5b16dd8ebe"
       },
       "source": [
         "from sklearn.svm import SVC\n",
         "model = SVC(gamma='auto')\n",
         "model.fit(X_train,y_train)"
       ],
-      "execution_count": 64,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,38 +209,89 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 74
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D5NnUPvDGxl6",
-        "outputId": "e8ce2c13-e57a-43ea-d710-df797ebbf5f9",
+        "id": "D5NnUPvDGxl6"
+      },
+      "source": [
+        "y_pred=model.predict(X_test)"
+      ],
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FGNBH7XiNy74",
+        "outputId": "089fed70-16b5-4435-8bd2-4e20bfde2ba3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "model.predict(X_test)"
+        " from sklearn.metrics import accuracy_score\n",
+        " accuracy_score(y_test, y_pred)"
       ],
-      "execution_count": 65,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+              "0.475"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 77
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d_YJoNvDN8vM",
+        "outputId": "f323eceb-28a3-4e8d-99dd-7760f3524969",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y_test"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0,\n",
+              "       1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c79NdGmRN1bA"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
