--- a/Dog-and-Cat.ipynb
+++ b/Dog-and-Cat.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled127.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMCtjBHCWnnECG7wbYBscua",
+      "authorship_tag": "ABX9TyNOl/yNngLNTWtd2+4Mh5tO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,13 +35,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6dMEnt9qq5uC",
-        "outputId": "a4d040c1-d841-4748-fc45-b0f5363ef375"
+        "outputId": "eca37623-a4af-413c-ca50-d47dc9457303"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 66,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,7 +70,7 @@
         "from torchvision import transforms\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 67,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -80,10 +80,9 @@
       },
       "source": [
         "transform = transforms.Compose([transforms.ToTensor(),\n",
-        "                                transforms.Resize(227),\n",
-        "                                transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])"
+        "                                transforms.Resize(227)])"
       ],
-      "execution_count": 68,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -95,7 +94,7 @@
         "alexnet = models.alexnet(pretrained=True)\n",
         "alexnet.classifier=alexnet.classifier[0:5]"
       ],
-      "execution_count": 69,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -126,14 +125,14 @@
         "       img_t=transform(img)\n",
         "       batch_t = torch.unsqueeze(img_t,0)\n",
         "       out = alexnet(batch_t)\n",
-        "       out=out.detach().numpy()\n",
+        "       out=out.detach().numpy()/255.0\n",
         "      #  image_as_array = np.array(img, np.uint8)\n",
         "      #  image_as_array = cv2.resize(image_as_array,(227,227))\n",
         "       images.append(out)\n",
         "       if 'dog' in f.filename: labels.append(1)\n",
         "       elif 'cat' in f.filename: labels.append(0)"
       ],
-      "execution_count": 70,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -145,7 +144,7 @@
         "images=np.array(images)\n",
         "labels=np.array(labels)"
       ],
-      "execution_count": 71,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -165,7 +164,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(images,labels, test_size=0.2, random_state=42)"
       ],
-      "execution_count": 72,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -177,8 +176,48 @@
         "X_train=X_train.reshape(X_train.shape[0],X_train.shape[1]*X_train.shape[2])\n",
         "X_test=X_test.reshape(X_test.shape[0],X_test.shape[1]*X_test.shape[2])"
       ],
-      "execution_count": 73,
+      "execution_count": 86,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7gNf2AZBbaeJ",
+        "outputId": "0d68b206-aca8-4aea-e69b-80930e0f3774",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "X_train"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ -3.6326578 ,   0.9012166 ,  -1.8559165 , ...,  -3.382327  ,\n",
+              "         -6.157464  ,  -3.5215354 ],\n",
+              "       [ -8.411607  ,  -7.082859  ,  -2.5301101 , ...,  -5.0959353 ,\n",
+              "         -2.3819644 ,  -1.6842092 ],\n",
+              "       [ -2.9649746 ,  -2.0328767 ,  -1.3086956 , ...,  -1.2761222 ,\n",
+              "         -5.6152897 ,   0.57499486],\n",
+              "       ...,\n",
+              "       [ -5.132268  ,  -3.1537852 ,  -3.1077569 , ...,  -2.4760664 ,\n",
+              "         -8.920271  ,  -3.4972641 ],\n",
+              "       [-28.108461  , -22.496906  ,  -5.283181  , ...,  -7.8922634 ,\n",
+              "        -17.40657   , -22.050331  ],\n",
+              "       [ -7.6477966 ,  -7.778644  ,  -1.1458132 , ...,  -5.719802  ,\n",
+              "        -13.386326  , -13.346991  ]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -187,14 +226,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pSrPsSK7Czmf",
-        "outputId": "8835773c-4fca-47c0-e903-cc5b16dd8ebe"
+        "outputId": "0f6bb784-8fc8-480a-8f31-6559fe56aaff"
       },
       "source": [
         "from sklearn.svm import SVC\n",
         "model = SVC(gamma='auto')\n",
         "model.fit(X_train,y_train)"
       ],
-      "execution_count": 74,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +248,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 74
+          "execution_count": 98
         }
       ]
     },
@@ -221,23 +260,23 @@
       "source": [
         "y_pred=model.predict(X_test)"
       ],
-      "execution_count": 76,
+      "execution_count": 99,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FGNBH7XiNy74",
-        "outputId": "089fed70-16b5-4435-8bd2-4e20bfde2ba3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "857e5337-95ac-403c-fc3a-11116b5842c6"
       },
       "source": [
         " from sklearn.metrics import accuracy_score\n",
         " accuracy_score(y_test, y_pred)"
       ],
-      "execution_count": 77,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +288,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 100
         }
       ]
     },
@@ -257,15 +296,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "d_YJoNvDN8vM",
-        "outputId": "f323eceb-28a3-4e8d-99dd-7760f3524969",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a19f5b5b-fa70-4635-8733-642d6fc6fa6b"
       },
       "source": [
         "y_test"
       ],
-      "execution_count": 78,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,20 +317,38 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 101
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c79NdGmRN1bA"
+        "id": "c79NdGmRN1bA",
+        "outputId": "31fed28e-ce89-4fec-bacd-7d5356027727",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "y_pred"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 102
+        }
+      ]
     }
   ]
 }
