--- a/VGG16-Dog-Cat.ipynb
+++ b/VGG16-Dog-Cat.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled131.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNUTeblQ+lVLmS/T3RKiE8Q",
+      "authorship_tag": "ABX9TyNWCkAc8L8MNp5O5Ugpfwmh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,6 +91,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "eXac2_-W-odq"
+      },
+      "source": [
+        "model_test=models.vgg16(pretrained=True)\n"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "QnHJtMUn_vsV"
       },
       "source": [
@@ -105,22 +116,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XxMk7mj19TwL"
-      },
-      "source": [
-        "  "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "p6z0rFNk9Ctj",
-        "outputId": "684a6bfa-796d-44bd-d88a-0d946d6fff8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p6z0rFNk9Ctj",
+        "outputId": "684a6bfa-796d-44bd-d88a-0d946d6fff8b"
       },
       "source": [
         "vgg16_1"
@@ -271,7 +271,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mrYSFGVnNd1S",
-        "outputId": "d127b695-a3f8-4a18-df34-b02ef147277a"
+        "outputId": "cbff8514-66db-4870-dbc6-1fb268eb4a20"
       },
       "source": [
         "X_train_fc1,X_test_fc1,y_train_fc1,y_test_fc1 = Split_data(images1,labels1)\n",
@@ -282,16 +282,20 @@
         "y_pred_test_fc1,Accuracy_Test_FC1 = Accuracy(model1,X_test_fc1,y_test_fc1)\n",
         "y_pred_train_fc2,Accuracy_Train_FC2 = Accuracy(model2,X_train_fc2,y_train_fc2)\n",
         "y_pred_test_fc2,Accuracy_Test_FC2 = Accuracy(model2,X_test_fc2,y_test_fc2)\n",
-        "print('Accuracy_FC1:',Accuracy_Test_FC1)\n",
-        "print('Accuracy_FC2:',Accuracy_Test_FC2)"
+        "print('Accuracy_Train_FC1:',Accuracy_Train_FC1)\n",
+        "print('Accuracy_Train_FC2:',Accuracy_Train_FC1)\n",
+        "print('Accuracy_Test_FC1:',Accuracy_Test_FC1)\n",
+        "print('Accuracy_Test_FC2:',Accuracy_Test_FC2)"
       ],
-      "execution_count": 23,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy_FC1: 0.926829268292683\n",
-            "Accuracy_FC2: 0.926829268292683\n"
+            "Accuracy_Train_FC1: 0.98125\n",
+            "Accuracy_Train_FC2: 0.98125\n",
+            "Accuracy_Test_FC1: 0.926829268292683\n",
+            "Accuracy_Test_FC2: 0.926829268292683\n"
           ],
           "name": "stdout"
         }
@@ -304,7 +308,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B-BU9aDGNwux",
-        "outputId": "25d4b734-70d4-412c-e51f-abd0a59027e0"
+        "outputId": "0990b080-1cee-4c55-a90c-cfd4cbb8bfff"
       },
       "source": [
         "from sklearn.metrics import f1_score,precision_score,recall_score\n",
@@ -315,7 +319,7 @@
         "print('f1_score_fc1:',f1_score(y_pred_test_fc1,y_test_fc1,average='binary'))\n",
         "print('f1_score_fc2:',f1_score(y_pred_test_fc2,y_test_fc2,average='binary'))"
       ],
-      "execution_count": 24,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
