--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled135.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNj6KlMn/Vgjlw1Lle5jKVI",
+      "authorship_tag": "ABX9TyMab3dVdz4nMxpPXgE/b4S4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -31,28 +32,52 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "15HH5w-wEum2",
+        "outputId": "a3a5d806-8678-4d8d-92e4-1c17dcb76fa8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zN6CmvXlAoSi",
-        "outputId": "409ac3e5-da80-472a-a70e-31ea88320612"
+        "outputId": "9e77f1b8-a841-4a11-8baa-edeab3bbf7f3"
       },
       "source": [
         "pip install tf2_yolov4"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting tf2_yolov4\n",
             "  Downloading https://files.pythonhosted.org/packages/6a/61/24a0aed949afc7715b767160abc241c7cd9e7ae9c34e4f8b42c1d6924e63/tf2_yolov4-0.1.0-py3-none-any.whl\n",
+            "Requirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (1.19.5)\n",
             "Requirement already satisfied: click>=6.7 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (8.0.0)\n",
             "Collecting tensorflow-addons>=0.9.1\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/66/4b/e893d194e626c24b3df2253066aa418f46a432fdb68250cde14bf9bb0700/tensorflow_addons-0.13.0-cp37-cp37m-manylinux2010_x86_64.whl (679kB)\n",
-            "\u001b[K     |████████████████████████████████| 686kB 10.8MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (1.19.5)\n",
-            "Requirement already satisfied: typeguard>=2.7 in /usr/local/lib/python3.7/dist-packages (from tensorflow-addons>=0.9.1->tf2_yolov4) (2.7.1)\n",
+            "\u001b[K     |████████████████████████████████| 686kB 19.6MB/s \n",
+            "\u001b[?25hRequirement already satisfied: typeguard>=2.7 in /usr/local/lib/python3.7/dist-packages (from tensorflow-addons>=0.9.1->tf2_yolov4) (2.7.1)\n",
             "Installing collected packages: tensorflow-addons, tf2-yolov4\n",
             "Successfully installed tensorflow-addons-0.13.0 tf2-yolov4-0.1.0\n"
           ],
@@ -63,12 +88,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 488
-        },
-        "id": "81788R5HANC4",
-        "outputId": "f5d61f72-e772-456a-b1b7-bee5cf80812f"
+        "id": "81788R5HANC4"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -79,6 +99,7 @@
         "import numpy as np\n",
         "from operator import itemgetter\n",
         "import cv2\n",
+        "import timeit\n",
         "\n",
         "WIDTH,HEIGHT=(1024,768)\n",
         "\n",
@@ -104,7 +125,7 @@
         "    'cell phone', 'microwave', 'oven', 'toaster', 'sink', 'refrigerator', 'book',\n",
         "    'clock', 'vase', 'scissors', 'teddy bear', 'hair drier', 'toothbrush'\n",
         "]\n",
-        "model.load_weights('C:/tai lieu hoc tap/NhapmonCV/advanced_cv/yolov4.h5')\n",
+        "model.load_weights('/content/drive/MyDrive/Pretrained/yolov4.h5')\n",
         "\n",
         "def images_processing(model,image,HEIGHT,WIDTH):\n",
         "    image=tf.convert_to_tensor(image,dtype=tf.float32)\n",
@@ -123,53 +144,46 @@
         "        print('Error opening video stream or file')\n",
         "        return \n",
         "    fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-        "    out = cv2.VideoWriter('output.avi',fourcc, 20.0, (768,1024))\n",
-        "    temp=0\n",
-        "    while cap.isOpened():\n",
-        "        temp+=1\n",
+        "    out = cv2.VideoWriter('output.avi',fourcc, 20, (768,1024))\n",
+        "    #start = timeit.default_timer()\n",
+        "    #start_video=0\n",
+        "    while (True):\n",
+        "        #start_video+=1\n",
         "        ret, frame = cap.read()\n",
         "        if ret==True:\n",
-        "            boxes,scores,classes,detections = images_processing(model,frame,768,1024)\n",
-        "            detections = len(classes)\n",
-        "            if detections > 0:\n",
-        "                image_rect = frame.copy()\n",
-        "                for (xmin,ymin,xmax,ymax) in boxes:\n",
-        "                   cv2.rectangle(image_rect,(int(xmin),int(ymin)),(int(xmax),int(ymax)),(0,255,0),2)\n",
-        "                   if temp==1: \n",
-        "                     plt.imshow(image_rect)           \n",
-        "                     plt.show()\n",
-        "                out.write(image_rect)\n",
-        "            else: out.write(frame)\n",
-        "            if cv2.waitKey(1)==ord('q'): break\n",
-        "        else: break\n",
-        "    out.release()\n",
-        "\n",
+        "           frame=cv2.resize(frame,(768,1024))\n",
+        "           #stop = timeit.default_timer()\n",
+        "           #if (start_video==1) or (stop-start>=2.0):\n",
+        "           boxes,scores,classes,detections = images_processing(model,frame,768,1024)\n",
+        "           detections = len(classes)\n",
+        "           if detections > 0:\n",
+        "                  image_rect = frame.copy()\n",
+        "                  for (xmin,ymin,xmax,ymax) in boxes:\n",
+        "                      cv2.rectangle(image_rect,(int(xmin),int(ymin)),(int(xmax),int(ymax)),(0,255,0),2)         \n",
+        "                  out.write(image_rect) \n",
+        "              #start = timeit.default_timer()\n",
+        "           else: out.write(frame)\n",
+        "           if cv2.waitKey(1)==ord('q'): break\n",
+        "        else: break \n",
+        "    out.release()\n"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5PaAOjB5eFiL"
+      },
+      "source": [
         "#image_path= 'C:/tai lieu hoc tap/NhapmonCV/advanced_cv/test1.jpg'\n",
         "#image=cv2.cvtColor(cv2.imread(image_path),cv2.COLOR_BGR2RGB)\n",
         "video_path='/content/video1.webm'\n",
         "#images_processing(model,image,HEIGHT,WIDTH)\n",
         "video_processing(model,video_path)"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "OSError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-1a4880e37b7a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;34m'clock'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'vase'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'scissors'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'teddy bear'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'hair drier'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'toothbrush'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m ]\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'C:/tai lieu hoc tap/NhapmonCV/advanced_cv/yolov4.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mimages_processing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mHEIGHT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mWIDTH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mload_weights\u001b[0;34m(self, filepath, by_name, skip_mismatch, options)\u001b[0m\n\u001b[1;32m   2225\u001b[0m           'first, then load the weights.')\n\u001b[1;32m   2226\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_assert_weights_created\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2227\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mh5py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2228\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;34m'layer_names'\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattrs\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m'model_weights'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2229\u001b[0m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'model_weights'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, **kwds)\u001b[0m\n\u001b[1;32m    406\u001b[0m                 fid = make_fid(name, mode, userblock_size,\n\u001b[1;32m    407\u001b[0m                                \u001b[0mfapl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfcpl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmake_fcpl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrack_order\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack_order\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 408\u001b[0;31m                                swmr=swmr)\n\u001b[0m\u001b[1;32m    409\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    410\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlibver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/h5py/_hl/files.py\u001b[0m in \u001b[0;36mmake_fid\u001b[0;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001b[0m\n\u001b[1;32m    171\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mswmr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mswmr_support\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m             \u001b[0mflags\u001b[0m \u001b[0;34m|=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_SWMR_READ\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 173\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    174\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mACC_RDWR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfapl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfapl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.open\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mOSError\u001b[0m: Unable to open file (unable to open file: name = 'C:/tai lieu hoc tap/NhapmonCV/advanced_cv/yolov4.h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
-          ]
-        }
-      ]
+      "execution_count": 37,
+      "outputs": []
     }
   ]
 }
