--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled135.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO2+fKD2pPDCg3MWRBGdPdH",
+      "authorship_tag": "ABX9TyOatoeoF5ZaZeWyrptoMVdl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "942d9c69-0e14-4a76-b2fa-816a6c9be123"
+        "outputId": "f4e761a1-6795-4024-e0a6-e6107dc467a5"
       },
       "source": [
         "from google.colab import drive\n",
@@ -60,7 +60,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zN6CmvXlAoSi",
-        "outputId": "6b972196-1ecf-48fb-ad3f-7cd4526daaad"
+        "outputId": "d391bf62-44c2-4ec1-e388-e2099e843a05"
       },
       "source": [
         "pip install tf2_yolov4"
@@ -72,11 +72,11 @@
           "text": [
             "Collecting tf2_yolov4\n",
             "  Downloading https://files.pythonhosted.org/packages/6a/61/24a0aed949afc7715b767160abc241c7cd9e7ae9c34e4f8b42c1d6924e63/tf2_yolov4-0.1.0-py3-none-any.whl\n",
-            "Requirement already satisfied: click>=6.7 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (8.0.0)\n",
+            "Requirement already satisfied: click>=6.7 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (7.1.2)\n",
             "Requirement already satisfied: numpy>=1.10 in /usr/local/lib/python3.7/dist-packages (from tf2_yolov4) (1.19.5)\n",
             "Collecting tensorflow-addons>=0.9.1\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/66/4b/e893d194e626c24b3df2253066aa418f46a432fdb68250cde14bf9bb0700/tensorflow_addons-0.13.0-cp37-cp37m-manylinux2010_x86_64.whl (679kB)\n",
-            "\u001b[K     |████████████████████████████████| 686kB 14.9MB/s \n",
+            "\u001b[K     |████████████████████████████████| 686kB 9.4MB/s \n",
             "\u001b[?25hRequirement already satisfied: typeguard>=2.7 in /usr/local/lib/python3.7/dist-packages (from tensorflow-addons>=0.9.1->tf2_yolov4) (2.7.1)\n",
             "Installing collected packages: tensorflow-addons, tf2-yolov4\n",
             "Successfully installed tensorflow-addons-0.13.0 tf2-yolov4-0.1.0\n"
@@ -178,9 +178,12 @@
         "       if cv2.waitKey(1) & 0xFF == ord('q'):\n",
         "          break\n",
         "    vid.release()\n",
-        "    cv2.destroyAllWindows()"
+        "    cv2.destroyAllWindows()\n",
+        "def DrawnRectangel(boxes,image,point,color):\n",
+        "    xmin,ymin,xmax,ymax = boxes[point]\n",
+        "    cv2.rectangle(image,(int(xmin),int(ymin)),(int(xmax),int(ymax)),color,2)      \n"
       ],
-      "execution_count": 152,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -222,37 +225,50 @@
         "transformed_points = cv2.perspectiveTransform(list_point_to_detect, M)\n",
         "transformed_points = transformed_points.reshape(transformed_points.shape[0],transformed_points.shape[2])"
       ],
-      "execution_count": 144,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "K3VwK0f9DXJk",
-        "outputId": "284373f0-68d9-4774-c7b7-bf3df204645c",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 229
+        },
+        "outputId": "39734194-cae8-4f60-b7bf-7c9556f351a9"
       },
       "source": [
         "distance_minimum = 200\n",
         "if len(detections>1):\n",
         "   list_indexes = list(itertools.combinations(range(len(transformed_points)), 2))\n",
+        "   x_y_ = []\n",
         "   for i,pair in enumerate(itertools.combinations(transformed_points, r=2)):\n",
         "      if np.sqrt( (pair[0][0] - pair[1][0])**2 + (pair[0][1] - pair[1][1])**2 ) < int(distance_minimum):\n",
         "            #change color top view\n",
         "            index_pt1 = list_indexes[i][0]\n",
         "            index_pt2 = list_indexes[i][1]\n",
-        "            #change color original frame"
+        "            #change color original frame\n",
+        "            xmin,ymin,xmax,ymax = boxes[index_pt1]\n",
+        "            cv2.rectangle(image,(int(xmin),int(ymin)),(int(xmax),int(ymax)),(0,0,255),2)  \n",
+        "            xmin,ymin,xmax,ymax = boxes[index_pt2]\n",
+        "            cv2.rectangle(image,(int(xmin),int(ymin)),(int(xmax),int(ymax)),(0,0,255),2)  \n",
+        "            x_y_.append([index_pt1,index_pt2])\n",
+        "    \n",
+        "            \n"
       ],
-      "execution_count": 151,
+      "execution_count": 59,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "[(0, 1), (0, 2), (0, 3), (0, 4), (1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 4)]\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-59-4474e2b9c31f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0;31m#change color original frame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mxmin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mymin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxmax\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mymax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mboxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex_pt1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrectangle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mymin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmax\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mymax\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0mxmin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mymin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxmax\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mymax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mboxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex_pt2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrectangle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mymin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmax\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mymax\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: an integer is required (got type tuple)"
+          ]
         }
       ]
     },
@@ -260,16 +276,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "7kTgGmKZ6VdV",
-        "outputId": "4f97f509-342a-471c-9c8b-3f092a210e40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 162
-        }
+        },
+        "outputId": "4f97f509-342a-471c-9c8b-3f092a210e40"
       },
       "source": [
         "plt.imshow(cv2.cvtColor(image,cv2.COLOR_BGR2RGB))"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -292,7 +308,7 @@
       "source": [
         "image_path= '/content/2019_05_13_72171_1557749850._large.jpg'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +330,7 @@
         "cv2.circle(image,(900,600),5,(0,0,255),-1)\n",
         "plt.imshow(cv2.cvtColor(image,cv2.COLOR_BGR2RGB))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
